--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -30,7 +30,7 @@ jobs:
       AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
       CORSO_BUCKET: ${{ secrets.CI_TESTS_S3_BUCKET }}
       CORSO_LOG_DIR: testlog
-      CORSO_LOG_FILE: ./src/testlog/testlogging.log
+      CORSO_LOG_FILE: testlog/testlogging.log
       TEST_USER: ${{ github.event.inputs.user != '' && github.event.inputs.user || secrets.CORSO_M365_TEST_USER_ID }}
       SECONDARY_TEST_USER : ${{  secrets.CORSO_SECONDARY_M365_TEST_USER_ID }}
       CORSO_PASSPHRASE: ${{ secrets.INTEGRATION_TEST_CORSO_PASSPHRASE }}
@@ -258,16 +258,16 @@ jobs:
           AZURE_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
           AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
         run: |
-          sufix=`date +"%Y-%m-%d-%H-%M"`
-         
+          suffix=`date +"%Y-%m-%d_%H-%M"`
+
           go run . onedrive files  \
           --user ${{ env.TEST_USER }} \
           --secondaryuser  ${{ env.SECONDARY_TEST_USER }} \
           --tenant ${{ env.AZURE_TENANT_ID }} \
-          --destination Corso_Restore_st_$sufix \
+          --destination Corso_Restore_st_$suffix \
           --count 4
 
-          echo result="$sufix" >> $GITHUB_OUTPUT
+          echo result="$suffix" >> $GITHUB_OUTPUT
 
       # run the tests
       - name: Backup onedrive test
