--- a/.github/workflows/sanity-test.yaml
+++ b/.github/workflows/sanity-test.yaml
@@ -35,11 +35,12 @@ jobs:
       CORSO_BUCKET: ${{ secrets.CI_TESTS_S3_BUCKET }}
       CORSO_LOG_DIR: testlog
       CORSO_LOG_FILE: testlog/testlogging.log
+      CORSO_PASSPHRASE: ${{ secrets.INTEGRATION_TEST_CORSO_PASSPHRASE }}
+      RESTORE_DEST_PFX: Corso_Test_Sanity_
+      TEST_RESULT: test_results
       TEST_USER: ${{ github.event.inputs.user != '' && github.event.inputs.user || secrets.CORSO_M365_TEST_USER_ID }}
       TEST_SITE: ${{ secrets.CORSO_M365_TEST_SITE_URL }}
       SECONDARY_TEST_USER : ${{  secrets.CORSO_SECONDARY_M365_TEST_USER_ID }}
-      CORSO_PASSPHRASE: ${{ secrets.INTEGRATION_TEST_CORSO_PASSPHRASE }}
-      TEST_RESULT: test_results
       # The default working directory doesn't seem to apply to things without
       # the 'run' directive. https://stackoverflow.com/a/67845456
       WORKING_DIR: src
@@ -105,15 +106,11 @@ jobs:
       # only runs if the test was successful
       - name: Exchange - Create new data
         working-directory: ./src/cmd/factory
-        env:
-          AZURE_CLIENT_ID: ${{ secrets[needs.SetM365App.outputs.client_id_env] }}
-          AZURE_CLIENT_SECRET: ${{ secrets[needs.SetM365App.outputs.client_secret_env] }}
-          AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
         run: |
           go run . exchange emails \
           --user ${TEST_USER} \
-          --tenant ${{ env.AZURE_TENANT_ID }} \
-          --destination Corso_Test_Sanity_${{ steps.repo-init.outputs.result }} \
+          --tenant ${AZURE_TENANT_ID} \
+          --destination ${RESTORE_DEST_PFX}${{ steps.repo-init.outputs.result }} \
           --count 4
 
       - name: Exchange - Backup
@@ -123,8 +120,8 @@ jobs:
           service: exchange
           kind: backup
           backup-args: '--mailbox "${TEST_USER}" --data "email"'
-          restore-args: '--email-folder Corso_Test_Sanity_${{ steps.repo-init.outputs.result }}'
-          test-folder: 'Corso_Test_Sanity_${{ steps.repo-init.outputs.result }}'
+          restore-args: '--email-folder ${RESTORE_DEST_PFX}${{ steps.repo-init.outputs.result }}'
+          test-folder: '${RESTORE_DEST_PFX}${{ steps.repo-init.outputs.result }}'
 
       - name: Exchange - Incremental backup
         id: exchange-backup-incremental
@@ -133,8 +130,8 @@ jobs:
           service: exchange
           kind: backup-incremental
           backup-args: '--mailbox "${TEST_USER}" --data "email"'
-          restore-args: '--email-folder Corso_Test_Sanity_${{ steps.repo-init.outputs.result }}'
-          test-folder: 'Corso_Test_Sanity_${{ steps.repo-init.outputs.result }}'
+          restore-args: '--email-folder ${RESTORE_DEST_PFX}${{ steps.repo-init.outputs.result }}'
+          test-folder: '${RESTORE_DEST_PFX}${{ steps.repo-init.outputs.result }}'
           base-backup: ${{ steps.exchange-backup.outputs.backup-id }}
 
       - name: Exchange - Non delta backup
@@ -144,8 +141,8 @@ jobs:
           service: exchange
           kind: backup-non-delta
           backup-args: '--mailbox "${TEST_USER}" --data "email" --disable-delta'
-          restore-args: '--email-folder Corso_Test_Sanity_${{ steps.repo-init.outputs.result }}'
-          test-folder: 'Corso_Test_Sanity_${{ steps.repo-init.outputs.result }}'
+          restore-args: '--email-folder ${RESTORE_DEST_PFX}${{ steps.repo-init.outputs.result }}'
+          test-folder: '${RESTORE_DEST_PFX}${{ steps.repo-init.outputs.result }}'
           base-backup: ${{ steps.exchange-backup.outputs.backup-id }}
 
       - name: Exchange - Incremental backup after non-delta
@@ -155,8 +152,8 @@ jobs:
           service: exchange
           kind: backup-incremental-after-non-delta
           backup-args: '--mailbox "${TEST_USER}" --data "email"'
-          restore-args: '--email-folder Corso_Test_Sanity_${{ steps.repo-init.outputs.result }}'
-          test-folder: 'Corso_Test_Sanity_${{ steps.repo-init.outputs.result }}'
+          restore-args: '--email-folder ${RESTORE_DEST_PFX}${{ steps.repo-init.outputs.result }}'
+          test-folder: '${RESTORE_DEST_PFX}${{ steps.repo-init.outputs.result }}'
           base-backup: ${{ steps.exchange-backup.outputs.backup-id }}
 
 
@@ -168,18 +165,14 @@ jobs:
       - name: OneDrive - Create new data
         id: new-data-creation-onedrive
         working-directory: ./src/cmd/factory
-        env:
-          AZURE_CLIENT_ID: ${{ secrets[needs.SetM365App.outputs.client_id_env] }}
-          AZURE_CLIENT_SECRET: ${{ secrets[needs.SetM365App.outputs.client_secret_env] }}
-          AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
         run: |
           suffix=$(date +"%Y-%m-%d_%H-%M")
 
           go run . onedrive files  \
             --user ${TEST_USER} \
-            --secondaryuser  ${{ env.SECONDARY_TEST_USER }} \
-            --tenant ${{ env.AZURE_TENANT_ID }} \
-            --destination Corso_Test_Sanity_$suffix \
+            --secondaryuser  ${SECONDARY_TEST_USER} \
+            --tenant ${AZURE_TENANT_ID} \
+            --destination ${RESTORE_DEST_PFX}$suffix \
             --count 4
 
           echo result="$suffix" >> $GITHUB_OUTPUT
@@ -191,22 +184,18 @@ jobs:
           service: onedrive
           kind: backup
           backup-args: '--user "${TEST_USER}"'
-          restore-args: '--folder Corso_Test_Sanity_${{ steps.new-data-creation-onedrive.outputs.result }} --restore-permissions'
-          test-folder: 'Corso_Test_Sanity_${{ steps.new-data-creation-onedrive.outputs.result }}'
+          restore-args: '--folder ${RESTORE_DEST_PFX}${{ steps.new-data-creation-onedrive.outputs.result }} --restore-permissions'
+          test-folder: '${RESTORE_DEST_PFX}${{ steps.new-data-creation-onedrive.outputs.result }}'
 
       # generate some more enteries for incremental check
       - name: OneDrive - Create new data (for incremental)
         working-directory: ./src/cmd/factory
-        env:
-          AZURE_CLIENT_ID: ${{ secrets[needs.SetM365App.outputs.client_id_env] }}
-          AZURE_CLIENT_SECRET: ${{ secrets[needs.SetM365App.outputs.client_secret_env] }}
-          AZURE_TENANT_ID: ${{ secrets.TENANT_ID }}
         run: |
           go run . onedrive files  \
             --user ${TEST_USER} \
-            --secondaryuser  ${{ env.SECONDARY_TEST_USER }} \
-            --tenant ${{ env.AZURE_TENANT_ID }} \
-            --destination Corso_Test_Sanity_${{ steps.new-data-creation-onedrive.outputs.result }} \
+            --secondaryuser  ${SECONDARY_TEST_USER} \
+            --tenant ${AZURE_TENANT_ID} \
+            --destination ${RESTORE_DEST_PFX}${{ steps.new-data-creation-onedrive.outputs.result }} \
             --count 4
 
       - name: OneDrive - Incremental backup
@@ -216,15 +205,29 @@ jobs:
           service: onedrive
           kind: incremental
           backup-args: '--user "${TEST_USER}"'
-          restore-args: '--folder Corso_Test_Sanity_${{ steps.new-data-creation-onedrive.outputs.result }} --restore-permissions'
-          test-folder: 'Corso_Test_Sanity_${{ steps.new-data-creation-onedrive.outputs.result }}'
+          restore-args: '--folder ${RESTORE_DEST_PFX}${{ steps.new-data-creation-onedrive.outputs.result }} --restore-permissions'
+          test-folder: '${RESTORE_DEST_PFX}${{ steps.new-data-creation-onedrive.outputs.result }}'
 
 ##########################################################################################################################################
 
 # Sharepoint
 
-      # TODO(keepers): generate new entries for test
-      # TODO: Add '--restore-permissions' when supported
+      # generate new entries for test
+      - name: SharePoint - Create new data
+        id: new-data-creation-sharepoint
+        working-directory: ./src/cmd/factory
+        run: |
+          suffix=$(date +"%Y-%m-%d_%H-%M")
+
+          go run . sharepoint files  \
+            --site ${TEST_SITE} \
+            --user ${TEST_USER} \
+            --secondaryuser  ${SECONDARY_TEST_USER} \
+            --tenant ${AZURE_TENANT_ID} \
+            --destination ${RESTORE_DEST_PFX}$suffix \
+            --count 4
+
+          echo result="$suffix" >> $GITHUB_OUTPUT
 
       - name: SharePoint - Backup
         id: sharepoint-backup
@@ -233,10 +236,20 @@ jobs:
           service: sharepoint
           kind: backup
           backup-args: '--site "${TEST_SITE}"'
-          restore-args: ''
-          test-folder: ''
+          restore-args: '--folder ${RESTORE_DEST_PFX}${{ steps.new-data-creation-sharepoint.outputs.result }} --restore-permissions'
+          test-folder: '${RESTORE_DEST_PFX}${{ steps.new-data-creation-sharepoint.outputs.result }}'
 
-      # TODO(rkeepers): generate some more entries for incremental check
+      # generate some more enteries for incremental check
+      - name: SharePoint - Create new data (for incremental)
+        working-directory: ./src/cmd/factory
+        run: |
+          go run . sharepoint files  \
+            --site ${TEST_SITE} \
+            --user ${TEST_USER} \
+            --secondaryuser  ${SECONDARY_TEST_USER} \
+            --tenant ${AZURE_TENANT_ID} \
+            --destination ${RESTORE_DEST_PFX}${{ steps.new-data-creation-sharepoint.outputs.result }} \
+            --count 4
 
       - name: SharePoint - Incremental backup
         id: sharepoint-incremental
@@ -245,8 +258,8 @@ jobs:
           service: sharepoint
           kind: incremental
           backup-args: '--site "${TEST_SITE}"'
-          restore-args: ''
-          test-folder: ''
+          restore-args: '--folder ${RESTORE_DEST_PFX}${{ steps.new-data-creation-sharepoint.outputs.result }} --restore-permissions'
+          test-folder: '${RESTORE_DEST_PFX}${{ steps.new-data-creation-sharepoint.outputs.result }}'
 
 ##########################################################################################################################################
 
